# llama.cpp

./: .gitignore  CMakeLists.txt  gguf_quantization_analysis_tool.py
bindings/python/: CMakeLists.txt  README.md  generate_bindings.py  pyproject.toml  setup.py
bindings/python/examples/: chat.py  simple.py
bindings/python/llama_cpp/: __init__.py  batch.py  context.py  llama_cpp.cpp  model.py  py.typed  py_chat_template.cpp  py_chat_template.h  py_llama_batch.cpp  py_llama_batch.h  py_llama_context.cpp  py_llama_context.h  py_llama_ggml.h  py_llama_model.cpp  py_llama_model.h  py_llama_quant.cpp  py_llama_quant.h  py_llama_sampler.cpp  py_llama_sampler.h  py_llama_vocab.cpp  py_llama_vocab.h  sampler.py  vocab.py
bindings/python/llama_cpp_gen/: py_ggml.cpp  py_llama_adapter.cpp  py_llama_model.cpp
bindings/python/llama_cpp_python.egg-info/: PKG-INFO  SOURCES.txt
examples/: CMakeLists.txt
examples/gui/: CMakeLists.txt  quantization_analysis.cpp
examples/imatrix/: imatrix_viewer.py
examples/quantize-stats/: quantize-stats.cpp
examples/simple/: simple.cpp
ggml/src/: ggml-quants.c
gguf-py/examples/: quantize_analyzer.py
gguf_quantization_analysis_tool/: README.md  __init__.py  download_model.py  imatrix_viewer.py  quantize-stats-cpp.py  quantize-stats.py  quantize-stats.py.old  quantize-stats3.py  roadmap.md  roadmap2.md  setup.py
src/: llama-model.h  llama-quant.cpp  llama-quant.h
